<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_splash_bg"
    android:id="@+id/splash">

    <!-- Sparkles Icon Container -->
    <FrameLayout
        android:id="@+id/iconContainer"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <!-- Background Sparkles (animated) -->
        <ImageView
            android:id="@+id/imgSparklesBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_sparkles"
            app:tint="@color/yellow_300"
            android:alpha="0.5"
            android:contentDescription="@string/sparkles_background" />

        <!-- Foreground Sparkles -->
        <ImageView
            android:id="@+id/imgSparkles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_sparkles"
            app:tint="@color/white"
            android:contentDescription="@string/sparkles" />
    </FrameLayout>

    <!-- Title -->
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_korean"
        android:textSize="@dimen/text_5xl"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:letterSpacing="-0.02"
        android:layout_marginTop="@dimen/spacing_8"
        app:layout_constraintTop_toBottomOf="@id/iconContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/txtSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_english"
        android:textSize="@dimen/text_base"
        android:textColor="@color/white_80"
        android:layout_marginTop="@dimen/spacing_2"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
